--- a/index.html
+++ b/index.html
@@ -5,20 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login</title>
 
-  <!-- No-flash: hide body until auth check completes -->
   <style>
+    /* hide body until auth check completes */
     html[data-auth-checked="false"] body { visibility: hidden; }
+
+    /* layout niceties for the input + toggle */
+    .input-wrapper {
+      position: relative;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+    .toggle-btn {
+      cursor: pointer;
+      font-size: 13px;
+      color: #007bff;
+      background: none;
+      border: none;
+      padding: 6px;
+      margin-left: -48px;
+      z-index: 2;
+    }
+    input[type=password], input[type=text], input[type=tel] {
+      width: 100%;
+      padding: 10px 56px 10px 10px; /* space for toggle */
+      box-sizing: border-box;
+    }
+    form { max-width: 420px; margin: 24px; }
+    label { display:block; margin-top:12px; margin-bottom:6px; font-weight:600; }
+    #loginBtn { margin-top:14px; padding:10px 12px; width:100%; }
+    #msg { color:#b00020; margin-top:8px; min-height:18px; }
   </style>
 
   <!-- Early auth check: runs before page content is visible -->
   <script>
     (function(){
-      // mark as not yet checked
       document.documentElement.setAttribute('data-auth-checked', 'false');
-
-      async function reveal() {
-        document.documentElement.setAttribute('data-auth-checked', 'true');
-      }
+      async function reveal(){ document.documentElement.setAttribute('data-auth-checked','true'); }
 
       (async function(){
         try {
@@ -26,19 +49,15 @@
           if (res.ok) {
             const j = await res.json();
             if (j && j.logged_in) {
-              // Let other scripts know (optional)
-              try { window.dispatchEvent(new CustomEvent('app:login', { detail: j.user })); } catch (e) {}
-              // If server requests partner form, follow it; otherwise go to dashboard
+              try { window.dispatchEvent(new CustomEvent('app:login', { detail: j.user })); } catch(e){}
               const redirectTo = j.partner_required ? '/partner_form.php' : '/dashboard.php';
               window.location.href = redirectTo;
               return;
             }
           }
-        } catch (e) {
-          // ignore errors, reveal login
+        } catch(e){
           console.warn('auth check failed', e);
         }
-        // not logged in: reveal the page
         reveal();
       })();
     })();
@@ -52,83 +71,91 @@
       <div class="info-inner">
         <h2>Welcome back</h2>
         <p class="info-desc">
-          Sign in to continue to your account and access secure services.<br><br>
-          Modern security, fast checkout, and instant notifications.
+          Sign in to continue to your account and access secure services.
         </p>
       </div>
     </aside>
 
     <div class="form-column">
-      <div>
-        <form id="loginForm">
-          <label>Phone</label>
-          <input name="phone" inputmode="numeric" pattern="\d{10}" maxlength="10" required />
-          <label>M-PIN</label>
-          <input name="mpin" placeholder="XXX-XXX" type="password" inputmode="numeric" maxlength="6" pattern="\d{4,6}" required />
-          <button type="submit" id="loginBtn">Login</button>
-        </form>
+      <form id="loginForm" autocomplete="off" novalidate>
+        <label for="phone">Phone</label>
+        <input id="phone" name="phone" inputmode="numeric" pattern="\d{10}" maxlength="10" required placeholder="10-digit phone" />
 
-        <div class="footer-links">
+        <label for="mpin">M-PIN</label>
+        <div class="input-wrapper">
+          <!-- note: id="mpin" added so toggle can find it -->
+          <input id="mpin" name="mpin" placeholder="●●●●" type="password" inputmode="numeric" maxlength="6" pattern="\d{4,6}" required />
+          <button type="button" class="toggle-btn" data-target="mpin" aria-label="Show mPIN">Show</button>
+        </div>
+
+        <button id="loginBtn" type="submit">Login</button>
+
+        <div class="footer-links" style="margin-top:8px;">
           <a href="forgot-mpin.html">Forgot your mPIN?</a>
-          <div id="msg" style="color:#b00020"></div>
-        </div>  
+        </div>
 
-        <div class="footer-links">
+        <div id="msg" role="status" aria-live="polite"></div>
+
+        <div class="footer-links" style="margin-top:10px;">
           Don't have an account? <a href="signup.html">Sign Up</a>
         </div>
-      </div>
-
-      <script>
-      const say = t => document.querySelector('#msg').textContent = t || '';
-
-      document.querySelector('#loginForm').onsubmit = async (e) => {
-        e.preventDefault();
-        say('');
-        const fd    = new FormData(e.target);
-        const phone = (fd.get('phone') || '').trim();
-        const mpin  = (fd.get('mpin')  || '').trim();
-
-        if (!/^\d{10}$/.test(phone)) return say('Enter 10-digit phone');
-        if (!/^\d{4,6}$/.test(mpin))  return say('Invalid mPIN');
-
-        try {
-          const r = await fetch('config/login.php', {
-            method: 'POST',
-            credentials: 'include',            // <- ensure cookie is set/sent
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ phone, mpin })
-          });
-
-          const text = await r.text();
-          let d;
-          try { d = JSON.parse(text); }
-          catch {
-            console.error('Non-JSON response:', text);
-            return say('Server error');
-          }
-
-          if (!r.ok || !d.success) {
-            console.error('Login error:', d);
-            return say(d.error || 'Login failed');
-          }
-
-          // Notify other scripts that login occurred
-          try { window.dispatchEvent(new CustomEvent('app:login', { detail: d.user || null })); } catch (e) {}
-
-          // ✅ success — redirect conditionally
-          if (d.partner_required) {
-            window.location.assign('/partner_form.php');
-          } else {
-            window.location.assign('/dashboard.php');
-          }
-
-        } catch (err) {
-          console.error(err);
-          say('Network error');
-        }
-      };
-      </script>
+      </form>
     </div>
   </div>
+
+<script>
+  // small helpers
+  const $ = s => document.querySelector(s);
+
+  // robust toggle handler: looks by id, then by name if id missing
+  document.addEventListener('click', (e) => {
+    if (!e.target.classList.contains('toggle-btn')) return;
+    const target = e.target.dataset.target;
+    let input = document.getElementById(target);
+    if (!input) input = document.querySelector(`[name="${target}"]`);
+    if (!input) return;
+    if (input.type === 'password') {
+      input.type = 'text';
+      e.target.textContent = 'Hide';
+      e.target.setAttribute('aria-label', 'Hide mPIN');
+    } else {
+      input.type = 'password';
+      e.target.textContent = 'Show';
+      e.target.setAttribute('aria-label', 'Show mPIN');
+    }
+  });
+
+  const say = t => { $('#msg').textContent = t || ''; };
+
+  document.querySelector('#loginForm').addEventListener('submit', async (e) => {
+    e.preventDefault(); say('');
+    const fd = new FormData(e.target);
+    const phone = (fd.get('phone') || '').trim();
+    const mpin  = (fd.get('mpin') || '').trim();
+    if (!/^\d{10}$/.test(phone)) return say('Enter 10-digit phone');
+    if (!/^\d{4,6}$/.test(mpin)) return say('Invalid mPIN');
+    try {
+      const r = await fetch('config/login.php', {
+        method: 'POST',
+        credentials: 'include',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ phone, mpin })
+      });
+      const text = await r.text();
+      let d;
+      try { d = JSON.parse(text); } catch { console.error('Non-JSON response:', text); return say('Server error'); }
+      if (!r.ok || !d.success) {
+        console.error('Login error:', d);
+        return say(d.error || d.message || 'Login failed');
+      }
+      try { window.dispatchEvent(new CustomEvent('app:login', { detail: d.user || null })); } catch (e) {}
+      const redirectTo = d.partner_required ? '/partner_form.php' : '/dashboard.php';
+      window.location.assign(redirectTo);
+    } catch (err) {
+      console.error(err);
+      say('Network error');
+    }
+  });
+</script>
 </body>
 </html>
